[gd_scene load_steps=17 format=3 uid="uid://bxrvjw02uooh6"]

[ext_resource type="Script" path="res://scripts/battle_scripts/battle_camera.gd" id="1_yyg60"]
[ext_resource type="Script" path="res://scripts/battle_scripts/grid.gd" id="2_848uk"]
[ext_resource type="Texture2D" uid="uid://bamvnerrjvd8q" path="res://graphics/tilesets/tileset_grass_battle.png" id="2_vftfe"]
[ext_resource type="Texture2D" uid="uid://daf6kautb2khf" path="res://graphics/tilesets/layer_tiles.png" id="3_ay3b2"]
[ext_resource type="Script" path="res://scripts/battle_scripts/event_bus.gd" id="4_08abm"]
[ext_resource type="Script" path="res://scripts/battle_scripts/collision_tile_map.gd" id="4_kyy62"]
[ext_resource type="Script" path="res://scripts/battle_scripts/controllers/battle_controller.gd" id="6_chnpp"]
[ext_resource type="PackedScene" uid="uid://eox0xlkp7ti4" path="res://scenes/user_interface/battle_selection_menu.tscn" id="8_k0pav"]
[ext_resource type="Script" path="res://scripts/battle_scripts/unit_initializer.gd" id="9_4aop7"]
[ext_resource type="Script" path="res://scripts/battle_scripts/controllers/player_controller.gd" id="9_gu3ug"]
[ext_resource type="Script" path="res://scripts/battle_scripts/controllers/enemy_controller.gd" id="9_mi2tb"]
[ext_resource type="PackedScene" uid="uid://cb5flhrouevwa" path="res://scenes/user_interface/unit_overview.tscn" id="12_pd8h1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k7hv1"]
texture = ExtResource("2_vftfe")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
5:11/0 = 0
6:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
17:1/0 = 0
18:1/0 = 0
7:2/0 = 0
8:2/0 = 0
17:2/0 = 0
18:2/0 = 0
7:3/0 = 0
8:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
17:3/0 = 0
18:3/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
9:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
17:7/0 = 0
17:8/0 = 0
18:8/0 = 0
17:10/0 = 0
18:10/0 = 0
17:11/0 = 0
18:11/0 = 0
0:12/0 = 0
2:12/0 = 0
4:12/0 = 0

[sub_resource type="TileSet" id="TileSet_ug1ja"]
sources/2 = SubResource("TileSetAtlasSource_k7hv1")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hkr5t"]
texture = ExtResource("3_ay3b2")
separation = Vector2i(16, 16)
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_f1fit"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_hkr5t")

[node name="Main" type="Node2D"]

[node name="BattleCamera" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
zoom = Vector2(2, 2)
script = ExtResource("1_yyg60")

[node name="BaseTileMap" type="TileMap" parent="."]
position = Vector2(1, 0)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_ug1ja")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-131075, 65538, 1, -65539, 65538, 1, -3, 65538, 1, 65533, 65538, 1, 131069, 65538, 1, 196605, 65538, 1, 262141, 65538, 1, 327677, 65538, 1, 393213, 65538, 1, 458749, 65538, 1, 524285, 65538, 1, 589821, 327682, 4, 655357, 720898, 1, 720893, 65538, 3, 786429, 65538, 1, 851965, 65538, 1, 917501, 65538, 1, 983037, 65538, 1, 1048573, 65538, 1, 1114109, 65538, 1, 1179645, 65538, 1, 1245181, 524290, 6, -131074, 65538, 1, -65538, 65538, 1, -2, 65538, 1, 65534, 65538, 1, 131070, 65538, 1, 196606, 65538, 1, 262142, 65538, 1, 327678, 65538, 1, 393214, 65538, 1, 458750, 65538, 1, 524286, 65538, 1, 589822, 196610, 4, 655358, 720898, 1, 720894, 65538, 3, 786430, 65538, 1, 851966, 65538, 1, 917502, 65538, 1, 983038, 65538, 1, 1048574, 65538, 1, 1114110, 65538, 1, 1179646, 65538, 1, 1245182, 458754, 5, -131073, 65538, 1, -1, 65538, 1, 65535, 65538, 1, 131071, 65538, 1, 196607, 65538, 1, 262143, 65538, 1, 327679, 65538, 1, 393215, 65538, 1, 458751, 65538, 1, 524287, 65538, 1, 589823, 327682, 4, 655359, 720898, 1, 720895, 65538, 3, 786431, 65538, 1, 851967, 262146, 14, 917503, 655362, 5, 983039, 655362, 5, 1048575, 655362, 6, 1114111, 262146, 1, 1179647, 65538, 1, 1245183, 65538, 1, -196608, 65538, 1, -131072, 65538, 1, -65536, 65538, 1, 0, 65538, 1, 65536, 65538, 1, 131072, 65538, 1, 196608, 524290, 5, 262144, 458754, 8, 327680, 65538, 1, 393216, 65538, 1, 458752, 65538, 1, 524288, 196610, 4, 589824, 720898, 1, 655360, 65538, 3, 720896, 65538, 14, 786432, 262146, 1, 851968, 262146, 1, 917504, 589826, 5, 983040, 589826, 5, 1048576, 262146, 1, 1114112, 655362, 5, 1179648, 65538, 1, -196607, 65538, 1, -131071, 65538, 1, -65535, 65538, 1, 65537, 589826, 5, 131073, 589826, 6, 196609, 65538, 4, 262145, 458754, 7, 327681, 65538, 1, 393217, 65538, 1, 458753, 65538, 1, 524289, 196610, 4, 589825, 720898, 1, 655361, 327682, 0, 720897, 327682, 1, 786433, 786434, 6, 851969, 851970, 1, 917505, 851970, 1, 983041, 851970, 2, 1048577, 262146, 1, -196606, 65538, 1, -131070, 65538, 1, -65534, 65538, 1, 2, 262146, 1, 65538, 655362, 5, 131074, 655362, 6, 196610, 65538, 4, 262146, 65538, 4, 327682, 65538, 4, 393218, 262146, 1, 458754, 655362, 5, 524290, 262146, 4, 589826, 720898, 1, 655362, 720898, 1, 720898, 851970, 5, 786434, 851970, 5, 851970, 720898, 1, 917506, 917506, 1, 983042, 917506, 2, 1048578, 458754, 7, -196605, 65538, 1, -131069, 65538, 1, -65533, 65538, 1, 3, 65538, 1, 65539, 65538, 1, 131075, 262146, 1, 262147, 65538, 4, 327683, 65538, 4, 393219, 262146, 1, 458755, 262146, 1, 524291, 262146, 4, 589827, 720898, 1, 655363, 196610, 0, 720899, 917506, 5, 786435, 917506, 6, 851971, 983042, 1, 917507, 983042, 1, 983043, 983042, 2, 1048579, 262146, 14, -196604, 65538, 1, -131068, 65538, 1, -65532, 65538, 1, 4, 65538, 1, 65540, 65538, 1, 131076, 262146, 1, 196612, 262146, 1, 262148, 262146, 1, 327684, 65538, 4, 393220, 65538, 4, 458756, 65538, 1, 524292, 262146, 4, 589828, 720898, 1, 655364, 65538, 3, 720900, 262146, 1, 786436, 524290, 6, 851972, 524290, 6, 983044, 262146, 14, 1048580, 65538, 14, 1114116, 65538, 4, -196603, 65538, 1, -131067, 65538, 1, -65531, 65538, 1, 5, 65538, 1, 65541, 65538, 1, 131077, 65538, 1, 196613, 262146, 1, 262149, 262146, 1, 327685, 65538, 1, 393221, 65538, 1, 458757, 65538, 1, 524293, 262146, 4, 589829, 720898, 1, 655365, 65538, 3, 720901, 262146, 1, 786437, 262146, 1, 851973, 262146, 14, 917509, 655362, 5, 983045, 65538, 14, 1048581, 65538, 4, 1114117, 65538, 4, -196602, 65538, 1, -131066, 65538, 4, -65530, 262146, 1, 6, 65538, 1, 65542, 65538, 1, 131078, 65538, 1, 196614, 262146, 1, 262150, 262146, 1, 327686, 65538, 1, 393222, 65538, 1, 458758, 65538, 1, 524294, 327682, 4, 589830, 720898, 1, 655366, 65538, 3, 720902, 262146, 1, 786438, 65538, 1, 851974, 262146, 1, 917510, 65538, 1, 983046, 65538, 1, 1048582, 65538, 1, 1114118, 65538, 1, 1179654, 65538, 1, -196601, 65538, 1, -131065, 65538, 1, -65529, 65538, 1, 7, 65538, 4, 65543, 65538, 4, 131079, 65538, 1, 196615, 262146, 1, 262151, 262146, 1, 327687, 65538, 4, 393223, 65538, 14, 458759, 262146, 14, 524295, 262146, 4, 589831, 720898, 1, 655367, 65538, 3, 720903, 262146, 1, 851975, 262146, 1, 917511, 65538, 1, 983047, 65538, 1, 1048583, 458754, 8, 1114119, 458754, 8, 1179655, 458754, 5, -196600, 65538, 1, -131064, 65538, 1, -65528, 65538, 1, 8, 65538, 4, 65544, 458754, 7, 131080, 458754, 7, 196616, 65538, 1, 262152, 65538, 1, 393224, 65538, 4, 458760, 65538, 14, 524296, 262146, 4, 589832, 720898, 1, 655368, 65538, 3, 720904, 65538, 14, 786440, 262146, 1, 851976, 262146, 1, 917512, 458754, 6, 983048, 65538, 1, 1048584, 524290, 6, 1114120, 524290, 6, 1179656, 65538, 1, -196599, 65538, 1, -131063, 65538, 1, -65527, 65538, 1, 9, 65538, 1, 65545, 65538, 1, 131081, 524290, 5, 196617, 65538, 1, 262153, 65538, 1, 327689, 262146, 1, 393225, 262146, 1, 458761, 65538, 1, 524297, 196610, 4, 589833, 720898, 1, 655369, 65538, 3, 720905, 262146, 1, 786441, 262146, 1, 851977, 65538, 1, 917513, 65538, 1, 983049, 458754, 5, 1048585, 65538, 1, 1114121, 65538, 1, 1179657, 458754, 5, -196598, 65538, 1, -131062, 65538, 1, -65526, 65538, 1, 10, 65538, 1, 65546, 65538, 1, 131082, 524290, 6, 196618, 65538, 1, 262154, 65538, 1, 327690, 65538, 1, 393226, 65538, 1, 458762, 65538, 1, 524298, 196610, 4, 589834, 720898, 1, 655370, 65538, 3, 720906, 262146, 1, 786442, 65538, 1, 851978, 65538, 1, 917514, 65538, 1, 983050, 65538, 1, 1048586, 65538, 1, 1114122, 65538, 1, 1179658, 65538, 1, -196597, 65538, 1, -131061, 65538, 1, -65525, 65538, 1, 11, 65538, 1, 65547, 65538, 1, 131083, 458754, 5, 196619, 65538, 1, 262155, 65538, 1, 327691, 65538, 1, 393227, 65538, 1, 458763, 65538, 1, 524299, 327682, 4, 589835, 720898, 1, 655371, 65538, 3, 720907, 524290, 5, 786443, 65538, 1, 851979, 65538, 1, 917515, 65538, 1, 983051, 65538, 1, 1048587, 65538, 1, 1114123, 65538, 1, 1179659, 65538, 1, -196596, 65538, 1, -131060, 65538, 1, -65524, 65538, 1, 12, 65538, 1, 65548, 65538, 1, 131084, 65538, 1, 196620, 65538, 1, 262156, 65538, 1, 327692, 524290, 5, 393228, 65538, 1, 458764, 65538, 1, 524300, 327682, 4, 589836, 720898, 1, 655372, 65538, 3, 720908, 458754, 5, 851980, 65538, 1, 917516, 65538, 1, 983052, 65538, 1, 1048588, 65538, 1, 1114124, 65538, 1, 1179660, 65538, 1, -196595, 65538, 1, -131059, 65538, 1, -65523, 65538, 1, 13, 65538, 1, 65549, 65538, 1, 131085, 65538, 1, 196621, 65538, 1, 262157, 65538, 1, 327693, 524290, 6, 393229, 65538, 1, 458765, 65538, 4, 524301, 327682, 4, 589837, 720898, 1, 655373, 65538, 3, 720909, 458754, 5, 786445, 65538, 1, 851981, 65538, 1, 917517, 65538, 1, 983053, 65538, 1, 1048589, 65538, 1, 1114125, 65538, 1, 1179661, 65538, 1, -196594, 65538, 1, -131058, 65538, 1, -65522, 65538, 1, 14, 65538, 1, 65550, 65538, 1, 196622, 524290, 6, 262158, 65538, 1, 327694, 65538, 1, 393230, 65538, 1, 458766, 262146, 1, 524302, 196610, 4, 589838, 720898, 1, 655374, 65538, 3, 720910, 458754, 5, 786446, 65538, 1, 851982, 65538, 1, 917518, 65538, 1, 983054, 65538, 1, 1048590, 65538, 1, 1114126, 65538, 1, 1179662, 65538, 1, -196593, 65538, 1, -131057, 65538, 1, -65521, 65538, 1, 15, 65538, 1, 65551, 65538, 1, 196623, 458754, 7, 262159, 65538, 1, 327695, 65538, 1, 393231, 65538, 1, 458767, 65538, 1, 524303, 262146, 4, 589839, 720898, 1, 655375, 65538, 3, 720911, 458754, 7, 786447, 65538, 1, 851983, 65538, 1, 917519, 65538, 1, 983055, 65538, 1, 1048591, 65538, 1, 1114127, 65538, 1, 1179663, 65538, 1, -196592, 65538, 1, -131056, 65538, 1, -65520, 65538, 1, 16, 65538, 1, 65552, 65538, 1, 196624, 65538, 1, 262160, 65538, 1, 327696, 65538, 1, 393232, 65538, 1, 458768, 65538, 1, 524304, 262146, 4, 589840, 720898, 1, 655376, 65538, 3, 720912, 65538, 1, 786448, 65538, 1, 851984, 65538, 1, 917520, 65538, 1, 983056, 65538, 1, 1048592, 65538, 1, 1114128, 65538, 1, 1179664, 65538, 1, -196591, 65538, 1, -131055, 65538, 1, -65519, 65538, 1, 17, 65538, 1, 65553, 65538, 1, 196625, 65538, 1, 262161, 65538, 1, 327697, 524290, 6, 393233, 458754, 6, 458769, 65538, 1, 524305, 262146, 4, 589841, 720898, 1, 655377, 65538, 3, 720913, 458754, 6, 786449, 65538, 1, 851985, 65538, 1, 917521, 65538, 1, 983057, 65538, 1, 1048593, 65538, 1, 1114129, 65538, 1, 1179665, 65538, 1, -196590, 327682, 1, -131054, 327682, 1, -65518, 327682, 1, 18, 327682, 1, 65554, 327682, 1, 131090, 131074, 4, 196626, 327682, 1, 262162, 327682, 1, 327698, 327682, 1, 393234, 131074, 4, 458770, 2, 6, 524306, 131074, 6, 589842, 720898, 1, 655378, 65538, 3, 720914, 65538, 1, 786450, 65538, 1, 851986, 65538, 1, 917522, 65538, 1, 983058, 65538, 1, 1048594, 65538, 1, 1114130, 65538, 1, 1179666, 65538, 1, -196589, 720898, 1, -131053, 720898, 1, -65517, 720898, 1, 19, 720898, 1, 65555, 720898, 1, 131091, 720898, 1, 196627, 720898, 1, 262163, 720898, 1, 327699, 720898, 1, 393235, 720898, 1, 458771, 720898, 1, 524307, 720898, 1, 589843, 720898, 1, 655379, 65538, 3, 720915, 65538, 1, 786451, 65538, 1, 851987, 65538, 1, 917523, 65538, 1, 983059, 65538, 1, 1048595, 65538, 1, 1114131, 65538, 1, 1179667, 65538, 1, -196588, 196610, 1, -131052, 196610, 1, -65516, 196610, 1, 20, 2, 4, 65556, 196610, 1, 131092, 196610, 1, 196628, 196610, 1, 262164, 196610, 1, 327700, 196610, 1, 393236, 196610, 1, 458772, 196610, 1, 524308, 2, 268435462, 589844, 2, 4, 655380, 65538, 1, 720916, 65538, 1, 786452, 65538, 1, 851988, 65538, 1, 917524, 65538, 1, 983060, 65538, 1, 1048596, 65538, 1, 1114132, 65538, 1, 1179668, 65538, 1, -196587, 65538, 1, -131051, 65538, 1, -65515, 65538, 1, 21, 65538, 1, 65557, 655362, 5, 131093, 65538, 14, 196629, 262146, 1, 262165, 65538, 1, 327701, 458754, 5, 393237, 458754, 5, 458773, 524290, 6, 524309, 65538, 1, 589845, 65538, 1, 655381, 65538, 1, 720917, 65538, 1, 786453, 65538, 1, 851989, 65538, 1, 917525, 65538, 1, 983061, 65538, 1, 1048597, 65538, 1, 1114133, 65538, 1, 1179669, 65538, 1, -196586, 65538, 1, -131050, 65538, 1, -65514, 65538, 1, 22, 65538, 1, 65558, 262146, 1, 131094, 262146, 14, 196630, 65538, 14, 262166, 65538, 1, 327702, 65538, 1, 393238, 458754, 8, 458774, 524290, 5, 524310, 65538, 1, 589846, 458754, 7, 655382, 65538, 1, 720918, 458754, 5, 786454, 65538, 1, 851990, 65538, 1, 917526, 65538, 1, 983062, 65538, 1, 1048598, 65538, 1, 1114134, 65538, 1, 1179670, 65538, 1, -196585, 65538, 1, -131049, 65538, 1, -65513, 65538, 1, 23, 65538, 1, 65559, 65538, 1, 131095, 655362, 5, 196631, 65538, 1, 262167, 65538, 1, 327703, 65538, 1, 393239, 65538, 1, 458775, 65538, 1, 524311, 458754, 7, 589847, 458754, 5, 655383, 65538, 1, 720919, 65538, 1, 786455, 65538, 1, 851991, 65538, 1, 917527, 65538, 1, 983063, 65538, 1, 1048599, 65538, 1, 1114135, 65538, 1, 1179671, 65538, 1, 524312, 65538, 1, 589848, 65538, 1, 655384, 65538, 1, 720920, 65538, 1, 786456, 65538, 1, 851992, 65538, 1, 917528, 65538, 1, 983064, 65538, 1, 1048600, 65538, 1, 1114136, 65538, 1, 1179672, 65538, 1, 1310717, 458754, 5, 1310718, 65538, 4, 1310719, 458754, 7, 1245184, 65538, 1, 1245185, 65538, 4, 1245186, 65538, 4, 1245187, 524290, 6, 1245188, 524290, 5, 1245189, 65538, 1, 1245190, 65538, 1, 1245191, 65538, 1, 1245192, 65538, 1, 1245193, 65538, 1, 1245194, 524290, 5, 1245195, 65538, 1, 1245196, 65538, 1, 1245197, 65538, 1, 1245198, 65538, 1, 1245199, 65538, 1, 1245200, 65538, 1, 1245201, 65538, 1, 1245202, 65538, 1, 1245203, 65538, 1, 1245204, 65538, 1, 1245205, 65538, 1, 1245206, 65538, 1, 1245207, 65538, 1, 1245208, 65538, 1, -65537, 262146, 1, 196611, 458754, 6, 1, 262146, 1, 1179649, 65538, 4, 1179650, 458754, 6, 1179651, 458754, 5, 1179652, 524290, 5, 1179653, 65538, 4, 1114113, 65538, 4, 1114114, 65538, 4, -196584, 65538, 1, -131048, 65538, 1, -65512, 65538, 1, 24, 65538, 1, 65560, 65538, 1, 131096, 65538, 1, 196632, 65538, 1, 262168, 65538, 1, 327704, 524290, 6, 393240, 458754, 7, 458776, 65538, 1, 131086, 65538, 1, 131087, 65538, 1, 131088, 65538, 1, 131089, 65538, 1, 786444, 65538, 4, 786439, 262146, 1, 917508, 262146, 1, 327688, 458754, 6, 1114115, 65538, 4)
layer_1/name = "Overlays"
layer_1/tile_data = PackedInt32Array(262162, 65538, 8, 262163, 65538, 8, 262164, 65538, 8, 524294, 2, 8, 589830, 2, 8, 655366, 2, 8, 6, 393218, 14, 65542, 2, 14, 131078, 196610, 14, 196614, 2, 14, 262150, 196610, 13, 327686, 393218, 14, 393222, 196610, 14, 458758, 2, 14, 262151, 65538, 13, 262152, 262146, 13, 262153, 262146, 13, 262154, 458754, 13, 262155, 393218, 13, 262156, 262146, 15, 262157, 65538, 13, 262158, 65538, 13, 262159, 262146, 13, 262160, 65538, 13, 262161, 262146, 13, -196602, 393218, 15, 720902, 131074, 14, 786438, 131074, 14, 851974, 131074, 14, 917510, 131074, 14, 983046, 131074, 14, 1048582, 131074, 14, 1114118, 131074, 14, 1179654, 131074, 14, 1245190, 131074, 14, 262165, 65538, 13, 262166, 65538, 13, 262167, 65538, 13, 262168, 65538, 13)
layer_2/name = "Objects"
layer_2/tile_data = PackedInt32Array(-196608, 786434, 7, -131072, 786434, 8, -196607, 851970, 7, -131071, 851970, 8, -196606, 917506, 7, -131070, 917506, 8, -196605, 983042, 7, -131069, 983042, 8, -196604, 524290, 9, -131068, 524290, 10, -65532, 524290, 11, -196603, 589826, 9, -131067, 589826, 10, -65531, 589826, 11, -196601, 983042, 13, -131065, 983042, 14, -65529, 983042, 15, -131074, 589826, 12, -65538, 786434, 14, -131073, 917506, 13, -65537, 786434, 13, -131075, 524290, 12, -65539, 786434, 14, -3, 524290, 12, -2, 589826, 12, 65533, 655362, 11, 131069, 655362, 12, 65534, 720898, 11, 131070, 720898, 12, -65536, 524290, 15, -65535, 589826, 15, -65534, 524290, 15, -65533, 589826, 15, -1, 655362, 13, 65535, 655362, 13, 131071, 655362, 13, 196607, 851970, 11, 196606, 786434, 11, 262142, 786434, 12, 262143, 851970, 12, -131064, 917506, 11, -65528, 917506, 12, -131063, 983042, 11, -65527, 983042, 12, -196600, 524290, 15, -196599, 589826, 15, -65520, 524290, 15, -65519, 589826, 15, -196595, 786434, 11, -196594, 851970, 11, -65526, 524290, 15, -65525, 589826, 15, -131062, 524290, 15, -131061, 589826, 15, 327677, 720898, 15, 458751, 983042, 14, 524287, 983042, 15, -65523, 851970, 13, -65522, 720898, 15, 393213, 917506, 11, 458749, 917506, 12, 393214, 983042, 11, 458750, 983042, 12, 524285, 524290, 12, 524286, 589826, 12, 327678, 524290, 15, 327679, 589826, 15, -65524, 851970, 13, -65521, 851970, 13, 393215, 983042, 13, 262141, 917506, 13, 196605, 786434, 13, -196592, 655362, 11, -131056, 655362, 12, -196591, 720898, 11, -131055, 720898, 12, -196596, 655362, 9, -131060, 655362, 10, -196593, 655362, 9, -131057, 655362, 10, -131059, 786434, 12, -131058, 851970, 12, -196598, 851970, 13, -196597, 851970, 13, -196587, 262146, 6, -131051, 262146, 7, -65515, 262146, 8, -196586, 327682, 6, -131050, 327682, 7, -65514, 327682, 8, -196585, 393218, 6, -131049, 393218, 7, -65513, 393218, 8, -131048, 524290, 7, -65512, 524290, 8, -196584, 458754, 10, 262144, 917506, 15, 393216, 655362, 11, 327680, 786434, 14, 327681, 655362, 13, 458753, 720898, 12, 458752, 655362, 12, 9, 851970, 15, 65547, 917506, 15, 10, 917506, 13, 2, 917506, 15, 65536, 983042, 13, 0, 786434, 15, 1, 720898, 14, 131072, 720898, 15, 65548, 720898, 13, 65549, 786434, 14, 13, 720898, 15, 12, 851970, 13, 65550, 720898, 15, 393228, 720898, 15, 458764, 720898, 14, 458763, 851970, 13, 458762, 786434, 13, 393229, 851970, 15, 393230, 786434, 14, 393231, 983042, 13, 458767, 720898, 15, 720893, 524290, 9, 786429, 524290, 10, 851965, 524290, 11, 720894, 589826, 9, 786430, 589826, 10, 851966, 589826, 11, 917501, 786434, 9, 983037, 786434, 10, 1048573, 524290, 12, 1048574, 589826, 12, 1114109, 720898, 11, 1179645, 720898, 12, 393217, 720898, 11, 851980, 262146, 6, 917516, 262146, 7, 983052, 262146, 8, 851981, 327682, 6, 917517, 327682, 7, 983053, 327682, 8, 851982, 393218, 6, 917518, 393218, 7, 983054, 393218, 8, 1114129, 524290, 7, 1179665, 524290, 8, 1114130, 589826, 7, 1179666, 589826, 8, 1114131, 655362, 7, 1179667, 655362, 8, 1114132, 720898, 7, 1179668, 720898, 8, 917520, 327682, 10, 983056, 327682, 11, 917521, 393218, 10, 983057, 393218, 11, 851984, 458754, 10, 1114124, 458754, 10, 983055, 393218, 9, 917522, 393218, 9, 1114125, 327682, 10, 1179661, 327682, 11, 1114126, 393218, 10, 1179662, 393218, 11, 1245198, 262146, 6, 1245199, 327682, 6, 1245200, 393218, 6, 983062, 524290, 7, 1048598, 524290, 8, 983063, 589826, 7, 1048599, 589826, 8, 983064, 655362, 7, 1048600, 655362, 8, 1114127, 458754, 10, 1048592, 393218, 9, 1179664, 393218, 9, 1048594, 458754, 10, 1048589, 458754, 10, 1179669, 327682, 10, 1245205, 327682, 11, 1179670, 393218, 10, 1245206, 393218, 11, 786451, 262146, 6, 851987, 262146, 7, 917523, 262146, 8, 786452, 327682, 6, 851988, 327682, 7, 917524, 327682, 8, 786453, 393218, 6, 851989, 393218, 7, 917525, 393218, 8, 1048596, 393218, 9, 983061, 458754, 10, 1114133, 458754, 10, 983059, 393218, 9, 1179671, 393218, 9, 1114136, 393218, 9, 917526, 458754, 10, 851991, 458754, 10)

[node name="CollisionTileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_f1fit")
format = 2
layer_0/name = "Unpassable"
layer_0/tile_data = PackedInt32Array(851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1245198, 0, 0, 851992, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 983042, 0, 0, 917506, 0, 0, 851971, 0, 0, 851970, 0, 0, 917507, 0, 0, 786435, 0, 0, 983043, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, -196589, 0, 0, -131053, 0, 0, -65517, 0, 0, 19, 0, 0, 589842, 0, 0, 589843, 0, 0, 524307, 0, 0, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 196627, 0, 0, 131091, 0, 0, 65555, 0, 0, 524308, 0, 0, 589841, 0, 0, 589840, 0, 0, 589839, 0, 0, 589838, 0, 0, 589837, 0, 0, 589836, 0, 0, 589835, 0, 0, 589834, 0, 0, 589833, 0, 0, 589832, 0, 0, 589831, 0, 0, 589829, 0, 0, 589828, 0, 0, 589827, 0, 0, 589826, 0, 0, 589825, 0, 0, 589824, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 458770, 0, 0)
layer_1/name = "Forest"
layer_1/tile_data = PackedInt32Array(458762, 0, 1, 458763, 0, 1, 458764, 0, 1, 393228, 0, 1, 393229, 0, 1, 393230, 0, 1, 393231, 0, 1, 458767, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 13, 0, 1, 12, 0, 1, 10, 0, 1, 9, 0, 1, 2, 0, 1, 1, 0, 1, 0, 0, 1, 65536, 0, 1, 131072, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 327681, 0, 1, 393217, 0, 1)
script = ExtResource("4_kyy62")

[node name="EventBus" type="Node2D" parent="."]
script = ExtResource("4_08abm")

[node name="BattleLogic" type="Node2D" parent="."]

[node name="Grid" type="Node2D" parent="BattleLogic"]
script = ExtResource("2_848uk")

[node name="BattleController" type="Node2D" parent="BattleLogic"]
script = ExtResource("6_chnpp")

[node name="UnitInitializer" type="Node2D" parent="BattleLogic"]
script = ExtResource("9_4aop7")

[node name="PlayerController" type="Node2D" parent="."]
script = ExtResource("9_gu3ug")

[node name="EnemyController" type="Node2D" parent="."]
script = ExtResource("9_mi2tb")

[node name="Units" type="Node2D" parent="."]

[node name="SkillAnimation" type="Node2D" parent="."]

[node name="UserInterface" type="Node2D" parent="."]

[node name="BattleSelectionMenu" parent="UserInterface" instance=ExtResource("8_k0pav")]
visible = false

[node name="UnitOverview" parent="UserInterface" instance=ExtResource("12_pd8h1")]
visible = false

[connection signal="actor_ended_turn" from="EventBus" to="BattleLogic/BattleController" method="_on_event_bus_actor_ended_turn"]
[connection signal="enemy_turn_started" from="EventBus" to="EnemyController" method="_on_event_bus_enemy_turn_started"]
[connection signal="player_moved" from="EventBus" to="UserInterface/BattleSelectionMenu" method="_on_event_bus_player_moved"]
[connection signal="player_turn_started" from="EventBus" to="PlayerController" method="_on_event_bus_player_turn_started"]
[connection signal="skill_selected" from="EventBus" to="UserInterface/BattleSelectionMenu" method="_on_event_bus_skill_selected"]
[connection signal="unit_attacked" from="EventBus" to="BattleLogic/BattleController" method="_on_event_bus_unit_attacked"]
[connection signal="unit_selecting_skills" from="EventBus" to="UserInterface/BattleSelectionMenu" method="_on_event_bus_unit_selecting_skills"]
